[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/gui_manager.gd" type="Script" id=1]
[ext_resource path="res://fonts/end_game_menu.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/elapsed_time.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "scale_text"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ResetGame:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/no-continue.regular.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 7 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/scale_text = SubResource( 1 )

[node name="ResetGame" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.85
margin_left = -102.4
margin_right = 97.6
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Press R to restart"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElapsedTime" type="Label" parent="."]
anchor_left = 0.8
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -20.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00:00.00"
align = 2
valign = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Menu"]
visible = false
margin_right = 1024.0
margin_bottom = 29.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Continue"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Restart" type="Button" parent="Menu"]
margin_right = 1024.0
margin_bottom = 29.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Restart"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Exit" type="Button" parent="Menu"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 62.0
custom_styles/focus = SubResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Exit"
flat = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Menu/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
